# mcp-chainladder

./: .gitignore  DOCS_DEPLOY.md  LICENSE  PYPI_PUBLISH.md  README.md  REPO_SETUP.md  SUBMISSION_NOTES.md  netlify.toml  pyproject.toml  server.json
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: CNAME  index.html  install.html  privacy.html  pro.html  robots.txt  sitemap.xml  style.css
examples/: basic.md  csv_workflow.md  outlier_exclusion.md
keygen/: README.md  cl_keygen.py
src/mcp_chainladder/: __init__.py  __main__.py  chainladder.py  license.py  methods_pro.py  server.py
tests/: test_parity.py  test_pro.py
